[gd_scene load_steps=12 format=2]

[ext_resource path="res://_assets/fonts/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/text_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/settings_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/pause_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=14]
size = 14
font_data = ExtResource( 1 )

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.454902 )
script = ExtResource( 4 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ContinueButton" parent="Buttons" instance=ExtResource( 2 )]
margin_top = 104.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Continue"

[node name="SettingsButton" parent="Buttons" instance=ExtResource( 2 )]
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Settings"

[node name="QuitButton" parent="Buttons" instance=ExtResource( 2 )]
margin_top = 148.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Quit"

[node name="QuitConfirmation" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="QuitConfirmation"]
margin_top = 115.0
margin_right = 480.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.701961, 0.72549, 0.819608, 1 )
custom_fonts/font = SubResource( 14 )
text = "Are you sure you want to quit?"
align = 1

[node name="Buttons" type="HBoxContainer" parent="QuitConfirmation"]
margin_top = 137.0
margin_right = 480.0
margin_bottom = 155.0
custom_constants/separation = 20
alignment = 1

[node name="CancelQuitButton" parent="QuitConfirmation/Buttons" instance=ExtResource( 2 )]
margin_left = 168.0
margin_top = 0.0
margin_right = 230.0
margin_bottom = 18.0
rect_min_size = Vector2( 62, 0 )
focus_mode = 2
text = "Cancel"

[node name="ConfirmQuitButton" parent="QuitConfirmation/Buttons" instance=ExtResource( 2 )]
margin_left = 250.0
margin_top = 0.0
margin_right = 312.0
margin_bottom = 18.0
rect_min_size = Vector2( 62, 0 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="QuitConfirmation/Buttons/CancelQuitButton" to="." method="_on_CancelQuitButton_pressed"]
[connection signal="pressed" from="QuitConfirmation/Buttons/ConfirmQuitButton" to="." method="_on_ConfirmQuitButton_pressed"]
[connection signal="visibility_changed" from="SettingsMenu" to="." method="_on_SettingsMenu_visibility_changed"]
